--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
-<title>BB oldala</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<body>
+<body style="background-color:seashell">
+	  <p>Hello Word!</p>
+    <h1 style="color: olive;">Benke Balázs</h1>
+    <h2 style="color: lime;">Benke Balázs</h2>
+    <h3 style="color:mediumorchid">Benke Balázs</h3>
+    <h4 style="color: mediumslateblue;">Benke Balázs</h4>
+    <h5 style="color: mediumturquoise;">Benke Balázs</h5>
+    <h6 style="color: mediumvioletred;">Benke Balázs</h6>
 
-<h1>Benke Balázs</h1>
-<h2>Benke Balázs</h2>
-<h3>Benke Balázs</h3>
-<h4>Benke Balázs</h4>
-<h5>Benke Balázs</h5>
-<h6>Benke Balázs</h6>
-<p>Ez itt a kollázsom:</p>
-
+    <p>	  
+	1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">KÉPLINK</a>
+    </p>
+    <p>
+	2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">LISTÁK</a>
+    </p>	
+    <p>
+	3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
+    </p>	  
+    <p>Ez itt a kollázsom:</p>
+    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg" alt="kollázs"
 </body>
 </html>
