--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 	3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
     </p>	  
     <p>Ez itt a kollázsom:</p>
-    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs"
+    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500
 </body>
 </html>
