--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <h6 style="color: mediumvioletred;">Benke Balázs</h6>
 
     <p>	  
-	1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">KÉPLINK</a>
+	1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
     </p>
     <p>
-	2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">LISTÁK</a>
+	2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
     </p>	
     <p>
 	3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
