--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body style="background-color:seashell">
+
+    <nav>
+        <a href="https://benkebalazs1.github.io/kollazs" style="color: red;">HOME</a> |
+        <a href="keplink.html">Képlink</a> |
+        <a href="listak.html">Listák</a> |
+        <a href="orarend.html">Órarend</a>
+      </nav>
+
 	  <p>Hello Word!</p>
     <h1 style="color: olive;">Benke Balázs</h1>
     <h2 style="color: lime;">Benke Balázs</h2>
@@ -16,15 +24,15 @@
     <h6 style="color: mediumvioletred;">Benke Balázs</h6>
 
     <p>	  
-	1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
+	1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">KÉPLINK</a>
     </p>
     <p>
-	2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
+	2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">LISTÁK</a>
     </p>	
     <p>
 	3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
     </p>	  
     <p>Ez itt a kollázsom:</p>
-    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500
+    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg" alt="kollázs" title="kollázs" width=500>
 </body>
 </html>
