--- a/keplink.html
+++ b/keplink.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
-<title>KÉPLINK</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Képlink</title>
 </head>
 <body>
 
-<h1>Benke Balázs</h1>
-<p>kép + link feladat:</p>
+    <nav>
+        <a href="https://benkebalazs1.github.io/kollazs">HOME</a> |
+        <a href="keplink.html">Képlink</a> |
+        <a href="listak.html">Listák</a> |
+        <a href="orarend.html">Órarend</a>
+      </nav>
 
-<a href="https://www.portfolio.hu/gazdasag/20200401/egy-macska-is-koronavirusos-lett-a-gazdaja-utan-423374">
-<img src="https://cdn.portfolio.hu/articles/images-xl/m/a/c/macska-cat-cica-360462.jpg" alt="" title="macska" width=250> 
-</a>
-
+     <h1>Benke Balázs</h1>
+     <h2>első feladat (képlink)</h2>
+     <a href="https://www.youtube.com/watch?v=SwSCTuVzbwg">
+        <img src="https://s13emagst.akamaized.net/products/13327/13326607/images/res_c118afe8af2f19f3919484370f0f1bc7.jpg" alt="Mentő Autó" width=550>
+    </a>
 </body>
 </html>
