--- a/listak.html
+++ b/listak.html
@@ -7,6 +7,14 @@
     <title>LISTÁK</title>
 </head>
 <body>
+
+    <nav>
+        <a href="https://benkebalazs1.github.io/kollazs">HOME</a> |
+        <a href="keplink.html">Képlink</a> |
+        <a href="listak.html">Listák</a> |
+        <a href="orarend.html">Órarend</a>
+      </nav>
+
     <p>Benke Balázs</p>
     <p>Listák:</p>
     <h1 style="color: blue;">A kedvenc tantárgyaim:</h1>
