--- a/orarend.html
+++ b/orarend.html
@@ -7,6 +7,14 @@
     <title>Órarend</title>
 </head>
 <body>
+
+    <nav>
+        <a href="https://benkebalazs1.github.io/kollazs">HOME</a> |
+        <a href="keplink.html">Képlink</a> |
+        <a href="listak.html">Listák</a> |
+        <a href="orarend.html">Órarend</a>
+      </nav>
+
     <table border="2px">
         <tr>
             <th bgcolor="yellow">Óra</th>
