--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BB oldala</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color:seashell">
 
     <nav>
-        <a href="https://benkebalazs1.github.io/kollazs" style="color: red;">HOME</a> |
-        <a href="keplink.html">Képlink</a> |
-        <a href="listak.html">Listák</a> |
-        <a href="orarend.html">Órarend</a>
+       <button> <a href="https://benkebalazs1.github.io/kollazs" style="color: red;">HOME</a> </button>
+       <button> <a href="keplink.html">Képlink</a> </button>
+       <button> <a href="listak.html">Listák</a> </button>
+       <button> <a href="orarend.html">Órarend</a> </button>
       </nav>
 
 	  <p>Hello Word!</p>
@@ -33,6 +34,6 @@
 	3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
     </p>	  
     <p>Ez itt a kollázsom:</p>
-    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg" alt="kollázs" title="kollázs" width=500>
+    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500>
 </body>
 </html>
