--- a/listak.html
+++ b/listak.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LISTÁK</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <nav>
-        <a href="https://benkebalazs1.github.io/kollazs">HOME</a> |
-        <a href="keplink.html">Képlink</a> |
-        <a href="listak.html">Listák</a> |
-        <a href="orarend.html">Órarend</a>
+        <button> <a href="https://benkebalazs1.github.io/kollazs">HOME</a> </button>
+        <button> <a href="keplink.html">Képlink</a> </button>
+        <button> <a href="listak.html">Listák</a> </button>
+        <button> <a href="orarend.html">Órarend</a> </button>
       </nav>
 
     <p>Benke Balázs</p>
