--- a/keplink.html
+++ b/keplink.html
@@ -9,17 +9,19 @@
 </head>
 <body>
 
-    <nav>
-        <button> <a href="https://benkebalazs1.github.io/kollazs">HOME</a> </button>
-        <button> <a href="keplink.html">Képlink</a> </button>
-        <button> <a href="listak.html">Listák</a> </button>
-        <button> <a href="orarend.html">Órarend</a> </button>
-      </nav>
+    <div class="sidebar">
+        <a class="active" href="index.html"">Home</a>
+        <a href="keplink.html">Képlink</a>
+        <a href="listak.html">Listák</a>
+        <a href="orarend.html">Órarend</a>
+      </div>
 
-     <h1>Benke Balázs</h1>
+     <div class="content">
+    <h1>Benke Balázs</h1>
      <h2>első feladat (képlink)</h2>
      <a href="https://www.youtube.com/watch?v=SwSCTuVzbwg">
-        <img src="https://s13emagst.akamaized.net/products/13327/13326607/images/res_c118afe8af2f19f3919484370f0f1bc7.jpg" alt="Mentő Autó" width=550>
-    </a>
+     <img src="https://s13emagst.akamaized.net/products/13327/13326607/images/res_c118afe8af2f19f3919484370f0f1bc7.jpg" alt="Mentő Autó" width=550>
+     </a>
+    </div>
 </body>
 </html>
