--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body style="background-color:seashell">
 
-    <nav>
-       <button> <a href="https://benkebalazs1.github.io/kollazs" style="color: red;">HOME</a> </button>
-       <button> <a href="keplink.html">Képlink</a> </button>
-       <button> <a href="listak.html">Listák</a> </button>
-       <button> <a href="orarend.html">Órarend</a> </button>
-      </nav>
+    <div class="sidebar">
+        <a class="active" href="index.html"">Home</a>
+        <a href="keplink.html">Képlink</a>
+        <a href="listak.html">Listák</a>
+        <a href="orarend.html">Órarend</a>
+      </div>
 
 	  <p>Hello Word!</p>
     <h1 style="color: olive;">Benke Balázs</h1>
@@ -24,16 +24,19 @@
     <h5 style="color: mediumturquoise;">Benke Balázs</h5>
     <h6 style="color: mediumvioletred;">Benke Balázs</h6>
 
-    <p>	  
-	1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
+    
+    <div class="content">
+    <p>
+    1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
     </p>
     <p>
-	2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
-    </p>	
+    2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
+    </p>
     <p>
-	3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
-    </p>	  
+    3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
+    </p>
     <p>Ez itt a kollázsom:</p>
     <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500>
+</div>
 </body>
 </html>
