--- a/listak.html
+++ b/listak.html
@@ -9,28 +9,30 @@
 </head>
 <body>
 
-    <nav>
-        <button> <a href="https://benkebalazs1.github.io/kollazs">HOME</a> </button>
-        <button> <a href="keplink.html">Képlink</a> </button>
-        <button> <a href="listak.html">Listák</a> </button>
-        <button> <a href="orarend.html">Órarend</a> </button>
-      </nav>
+    <div class="sidebar">
+        <a class="active" href="index.html"">Home</a>
+        <a href="keplink.html">Képlink</a>
+        <a href="listak.html">Listák</a>
+        <a href="orarend.html">Órarend</a>
+      </div>
 
+    <div class="content">
     <p>Benke Balázs</p>
     <p>Listák:</p>
     <h1 style="color: blue;">A kedvenc tantárgyaim:</h1>
     <ol>
-        <li>IKT PROJEKTMUNKA</li>
-        <li>INFORMTIKA ÉS TÁVKÖZLÉS</li>
-        <li>OSZTÁLY FÖNŐKI</li>
+    <li>IKT PROJEKTMUNKA</li>
+    <li>INFORMTIKA ÉS TÁVKÖZLÉS</li>
+    <li>OSZTÁLY FÖNŐKI</li>
     </ol>
-
+    
     <h1 style="color: orange;">Kedvenc szabadidős tevénykeségeim:</h1>
     <ul>
-        <li>Számítógépezés</il>
-        <li>Macska simogatás</li>
-        <li>Nem tudom</li>
-        </ul>
+    <li>Számítógépezés</il>
+    <li>Macska simogatás</li>
+    <li>Nem tudom</li>
+    </ul>
+</div>
 
 </body>
 </html>
