--- a/orarend.html
+++ b/orarend.html
@@ -10,10 +10,10 @@
 <body>
 
     <div class="sidebar">
-        <a class="active" href="index.html"">Home</a>
-        <a href="keplink.html">Képlink</a>
-        <a href="listak.html">Listák</a>
-        <a href="orarend.html">Órarend</a>
+        <a class="active" href="benkebalazs1.github.io/kollazs/index"">Home</a>
+        <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
+        <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
       </div>
 
     <div class="content">
