--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body style="background-color:seashell">
 
     <div class="sidebar">
-        <a class="active" href="index.html"">Home</a>
-        <a href="keplink.html">Képlink</a>
-        <a href="listak.html">Listák</a>
-        <a href="orarend.html">Órarend</a>
+        <a class="active" href="benkebalazs1.github.io/kollazs/index"">Home</a>
+        <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
+        <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
       </div>
+
 
 	  <p>Hello Word!</p>
     <h1 style="color: olive;">Benke Balázs</h1>
