--- a/index.html
+++ b/index.html
@@ -9,33 +9,35 @@
 </head>
 <body style="background-color:seashell">
 
-    <div class="sidebar">
-        <a class="active" href="benkebalazs1.github.io/kollazs/index">Home</a>
+
+      <div class="sidebar">
+        <a class="active" href="https://benkebalazs1.github.io/kollazs">Rólam</a>
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
       </div>
+      
 
-      <div class="content">
-	  <p>Hello Word!</p>
-    <h1 style="color: olive;">Benke Balázs</h1>
-    <h2 style="color: lime;">Benke Balázs</h2>
-    <h3 style="color:mediumorchid">Benke Balázs</h3>
-    <h4 style="color: mediumslateblue;">Benke Balázs</h4>
-    <h5 style="color: mediumturquoise;">Benke Balázs</h5>
-    <h6 style="color: mediumvioletred;">Benke Balázs</h6>
-   
-    <p>
-    1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
-    </p>
-    <p>
-    2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
-    </p>
-    <p>
-    3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
-    </p>
-    <p>Ez itt a kollázsom:</p>
-    <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500>
-</div>
+	  <div class="content">
+          <p>Hello Word!</p>
+              <h1 style="color: olive;">Benke Balázs</h1>
+              <h2 style="color: lime;">Benke Balázs</h2>
+              <h3 style="color:mediumorchid">Benke Balázs</h3>
+              <h4 style="color: mediumslateblue;">Benke Balázs</h4>
+              <h5 style="color: mediumturquoise;">Benke Balázs</h5>
+              <h6 style="color: mediumvioletred;">Benke Balázs</h6>
+
+            <p>
+                1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
+            </p>
+            <p>
+                2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
+            </p>
+            <p>
+                3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
+            </p>
+            <p>Ez itt a kollázsom:</p>
+            <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500>
+        </div>
 </body>
 </html>
