--- a/keplink.html
+++ b/keplink.html
@@ -9,19 +9,20 @@
 </head>
 <body>
 
+
     <div class="sidebar">
-        <a class="active" href="benkebalazs1.github.io/kollazs/index">Home</a>
+        <a class="active" href="https://benkebalazs1.github.io/kollazs">Home</a>
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
-      </div>
+    </div>    
 
-     <div class="content">
-    <h1>Benke Balázs</h1>
-     <h2>első feladat (képlink)</h2>
-     <a href="https://www.youtube.com/watch?v=SwSCTuVzbwg">
-     <img src="https://s13emagst.akamaized.net/products/13327/13326607/images/res_c118afe8af2f19f3919484370f0f1bc7.jpg" alt="Mentő Autó" width=550>
-     </a>
-    </div>
+    <div class="content">    
+         <h1>Benke Balázs</h1>
+         <h2>első feladat (képlink)</h2>
+         <a href="https://www.youtube.com/watch?v=SwSCTuVzbwg">
+            <img src="https://s13emagst.akamaized.net/products/13327/13326607/images/res_c118afe8af2f19f3919484370f0f1bc7.jpg" alt="Mentő Autó" width=550>
+             </a>
+     </div>
 </body>
 </html>
