--- a/listak.html
+++ b/listak.html
@@ -4,36 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LISTÁK</title>
+    <title>Listák</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+
     <div class="sidebar">
-        <a class="active" href="benkebalazs1.github.io/kollazs/index">Home</a>
+        <a class="active" href="https://benkebalazs1.github.io/kollazs">Home</a>
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
-      </div>
+    </div>    
 
+    <div class="content">    
+        <p>Benke Balázs</p>
+        <p>Listák:</p>
+        <h1 style="color: blue;">A kedvenc tantárgyaim:</h1>
+        <ol>
+            <li>IKT PROJEKTMUNKA</li>
+            <li>INFORMTIKA ÉS TÁVKÖZLÉS</li>
+            <li>OSZTÁLY FŐNÖKI</li>
+        </ol>
 
-    <div class="content">
-    <p>Benke Balázs</p>
-    <p>Listák:</p>
-    <h1 style="color: blue;">A kedvenc tantárgyaim:</h1>
-    <ol>
-    <li>IKT PROJEKTMUNKA</li>
-    <li>INFORMTIKA ÉS TÁVKÖZLÉS</li>
-    <li>OSZTÁLY FÖNŐKI</li>
-    </ol>
-    
-    <h1 style="color: orange;">Kedvenc szabadidős tevénykeségeim:</h1>
-    <ul>
-    <li>Számítógépezés</il>
-    <li>Macska simogatás</li>
-    <li>Nem tudom</li>
-    </ul>
-</div>
+        <h1 style="color: orange;">Kedvenc szabadidős tevénykeségeim:</h1>
+        <ul>
+            <li>Számítógépezés</il>
+            <li>Macska simogatás</li>
+            <li>Nem tudom</li>
+            </ul>
+    </div>
 
 </body>
 </html>
