--- a/listak.html
+++ b/listak.html
@@ -11,7 +11,7 @@
 
 
     <div class="sidebar">
-        <a class="active" href="https://benkebalazs1.github.io/kollazs">Home</a>
+        <a class="active" href="https://benkebalazs1.github.io/kollazs">Rólam</a>
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
