--- a/orarend.html
+++ b/orarend.html
@@ -9,96 +9,100 @@
 </head>
 <body>
 
+
     <div class="sidebar">
-        <a class="active" href="benkebalazs1.github.io/kollazs/index">Home</a>
+        <a class="active" href="https://benkebalazs1.github.io/kollazs">Rólam</a>
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
       </div>
 
+
+ 
     <div class="content">
-    <table border="2px">
-    <tr>
-    <th bgcolor="yellow">Óra</th>
-    <td bgcolor="yellow">Hétfő</td>
-    <td bgcolor="yellow">Kedd</td>
-    <td bgcolor="yellow">Szerda</td>
-    <td bgcolor="yellow">Csütörtök</td>
-    <td bgcolor="yellow">Péntek</td>
-    </tr>
-    <tr>
-    <th bgcolor="green">0</th>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure"></td>
-    </tr>
-    <tr>
-    <th bgcolor="green">1</th>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure">Matematika</td>
-    <td bgcolor="azure">Irodalom</td>
-    <td bgcolor="azure">Angol nyelv</td>
-    <td bgcolor="azure">Matematika</td>
-    </tr>
-    <tr>
-    <th bgcolor="green">2</th>
-    <td bgcolor="azure">Programozási alapok</td>
-    <td bgcolor="azure">Angol nyelv</td>
-    <td bgcolor="azure">Komplex természettudomány</td>
-    <td bgcolor="azure">Komplex természettudomány</td>
-    <td bgcolor="azure">Történelem</td>
-    </tr>
-    <tr>
-    <th bgcolor="green">3</th>
-    <td bgcolor="azure">Programozási alapok</td>
-    <td bgcolor="azure">Nyelvtan</td>
-    <td bgcolor="azure">Matematika</td>
-    <td bgcolor="azure">Történelem</td>
-    <td bgcolor="azure">Matematika</td>
-    </tr>
-    <tr>
-    <th bgcolor="green">4</th>
-    <td bgcolor="azure">Munkavállalói ismeretek</td>
-    <td bgcolor="azure">Testnevelés</td>
-    <td bgcolor="azure">Történelem</td>
-    <td bgcolor="azure">Testnevelés</td>
-    <td bgcolor="azure">Angol nyelv</td>
-    </tr>
-    <tr>
-    <th bgcolor="green">5</th>
-    <td bgcolor="azure">Komplex természettudomáy</td>
-    <td bgcolor="azure">Irodalom</td>
-    <td bgcolor="azure">IKT projektmunka I.</td>
-    <td bgcolor="azure">Matematika</td>
-    <td bgcolor="azure">Irodalom</td>
-    </tr>
-    <tr>
-    <th bgcolor="green">6</th>
-    <td bgcolor="azure">Angol</td>
-    <td bgcolor="azure">Osztályfőnöki</td>
-    <td bgcolor="azure">Informatika és távközlés</td>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure">Nyelvtan</td>
-    </tr>
-    <tr>
-    <th bgcolor="green">7</th>
-    <td bgcolor="azure">Testnevelés</td>
-    <td bgcolor="azure">Digitális kultúra</td>
-    <td bgcolor="azure">Informatika és távközlés</td>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure"></td>
-    </tr>
-    <tr>
-    <th bgcolor="green">8</th>
-    <td bgcolor="azure">Testnevelés</td>
-    <td bgcolor="azure">Digitális kultúra</td>
-    <td bgcolor="azure">Informatika és távközlés</td>
-    <td bgcolor="azure"></td>
-    <td bgcolor="azure"></td>
-    </tr>
-    </table>
-</div>
+        <table border="2px">
+            <tr>
+                <th bgcolor="yellow">Óra</th>
+                <td bgcolor="yellow">Hétfő</td>
+                <td bgcolor="yellow">Kedd</td>
+                <td bgcolor="yellow">Szerda</td>
+                <td bgcolor="yellow">Csütörtök</td>
+                <td bgcolor="yellow">Péntek</td>
+            </tr>
+            <tr>
+                <th bgcolor="green">0</th>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure"></td>
+            </tr>
+            <tr>
+                <th bgcolor="green">1</th>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure">Matematika</td>
+                <td bgcolor="azure">Irodalom</td>
+                <td bgcolor="azure">Angol nyelv</td>
+                <td bgcolor="azure">Matematika</td>
+            </tr>
+            <tr>
+                <th bgcolor="green">2</th>
+                <td bgcolor="azure">Programozási alapok</td>
+                <td bgcolor="azure">Angol nyelv</td>
+                <td bgcolor="azure">Komplex természettudomány</td>
+                <td bgcolor="azure">Komplex természettudomány</td>
+                <td bgcolor="azure">Történelem</td>
+            </tr>
+            <tr>
+                <th bgcolor="green">3</th>
+                <td bgcolor="azure">Programozási alapok</td>
+                <td bgcolor="azure">Nyelvtan</td>
+                <td bgcolor="azure">Matematika</td>
+                <td bgcolor="azure">Történelem</td>
+                <td bgcolor="azure">Matematika</td>
+            </tr>
+            <tr>
+                <th bgcolor="green">4</th>
+                <td bgcolor="azure">Munkavállalói ismeretek</td>
+                <td bgcolor="azure">Testnevelés</td>
+                <td bgcolor="azure">Történelem</td>
+                <td bgcolor="azure">Testnevelés</td>
+                <td bgcolor="azure">Angol nyelv</td>
+            </tr>
+            <tr>
+                <th bgcolor="green">5</th>
+                <td bgcolor="azure">Komplex természettudomáy</td>
+                <td bgcolor="azure">Irodalom</td>
+                <td bgcolor="azure">IKT projektmunka I.</td>
+                <td bgcolor="azure">Matematika</td>
+                <td bgcolor="azure">Irodalom</td>
+            </tr>
+            <tr>
+                <th bgcolor="green">6</th>
+                <td bgcolor="azure">Angol</td>
+                <td bgcolor="azure">Osztályfőnöki</td>
+                <td bgcolor="azure">Informatika és távközlés</td>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure">Nyelvtan</td>
+            </tr>
+            <tr>
+                <th bgcolor="green">7</th>
+                <td bgcolor="azure">SNI fejlesztő</td>
+                <td bgcolor="azure">Digitális kultúra</td>
+                <td bgcolor="azure">Informatika és távközlés</td>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure"></td>
+            </tr>
+            <tr>
+                <th bgcolor="green">8</th>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure">Digitális kultúra</td>
+                <td bgcolor="azure">Informatika és távközlés</td>
+                <td bgcolor="azure"></td>
+                <td bgcolor="azure"></td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 </html>
