--- a/evszak.html
+++ b/evszak.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="evszak.css">
 </head>
 <body>
+
+    <div class="sidebar">
+        <a class="active" href="benkebalazs1.github.io/kollazs/index">Home</a>
+        <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
+        <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
+        <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
+      </div>
+ 
     <h1> Évszakok </h1> 
     <table>
         <tr>
