--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
+        <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
       </div>
 
       <div class="content">
