--- a/evszak.html
+++ b/evszak.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Évszakok</title>
     <link rel="stylesheet" href="evszak.css">
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
 
