--- a/evszak.html
+++ b/evszak.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="sidebar">
-        <a class="active" href="benkebalazs1.github.io/kollazs/index">Home</a>
+        <a class="active" href="https://benkebalazs1.github.io/kollazs/index">Home</a>
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
