--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
+        <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
       </div>
 
       <div class="content">
@@ -37,6 +38,9 @@
     </p>
      <p>
     4. feladat: <a href="https://benkebalazs1.github.io/kollazs/evszak.html" target="blank">Évszakok</a>      
+     </p>
+     <p>
+    5. feladat: <a href="https://benkebalazs1.github.io/kollazs/pizza.html" target="blank">Pizza</a>     
      </p>
     <p>Ez itt a kollázsom:</p>
     <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500>
