--- a/orarend.html
+++ b/orarend.html
@@ -15,6 +15,7 @@
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
+        <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
       </div>
 
 
