--- a/pizza.html
+++ b/pizza.html
@@ -15,8 +15,25 @@
         <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
-        <a href=""
+        <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
       </div>
 
+<h1>Pizza rendelési űrlap</h1>
+
+      <input type='text'> <h1>Név/Email cím</h1>
+      <input type='text'> <h1>Telefonszám</h1>
+      <input type='password'>  <h1>Jelszó</h1>
+      <p></p> 
+      <h1>Pizza adatok</h1>
+      <input type='text'> <h1>Pizza méret</h1>
+      <input type='checkbox'> 24
+      <input type='checkbox'> 36
+      <input type='checkbox'> 50
+      <input type='checkbox'> amerikai méret (100)
+      <p></p>
+      <input type='time'> válasza ki a kívánt időpontot
+      <p></p>
+      <textarea cols=40 rows=4></textarea> megjegyzés:
+      
 </body>
 </html>
