--- a/pizza.html
+++ b/pizza.html
@@ -20,20 +20,28 @@
 
 <h1>Pizza rendelési űrlap</h1>
 
-      <input type='text'> <h1>Név/Email cím</h1>
-      <input type='text'> <h1>Telefonszám</h1>
-      <input type='password'>  <h1>Jelszó</h1>
+      <fieldset>
+          <input type='text'> <h1>Név/Email cím</h1>
+          <input type='text'> <h1>Telefonszám</h1>
+          <input type='password'>  <h1>Jelszó</h1>
+      </fieldset>
       <p></p> 
       <h1>Pizza adatok</h1>
-      <input type='text'> <h1>Pizza méret</h1>
-      <input type='checkbox'> 24
-      <input type='checkbox'> 36
-      <input type='checkbox'> 50
-      <input type='checkbox'> amerikai méret (100)
+      <fieldset>
+          <input type='text'> <h1>Pizza méret</h1>
+          <input type='checkbox'> 24 cm
+          <input type='checkbox'> 36 cm
+          <input type='checkbox'> 50 cm
+          <input type='checkbox'> amerikai méret (100 cm)
+      </fieldset>
       <p></p>
-      <input type='time'> válasza ki a kívánt időpontot
+      <fieldset>
+    <input type='time'> válasza ki a kívánt időpontot
+    </fieldset>
       <p></p>
-      <textarea cols=40 rows=4></textarea> megjegyzés:
-      
+      <fieldset>
+    <textarea cols=40 rows=4></textarea> megjegyzés:
+    </fieldset>
+
 </body>
 </html>
