--- a/pizza.html
+++ b/pizza.html
@@ -40,7 +40,8 @@
     </fieldset>
       <p></p>
       <fieldset>
-    <textarea cols=40 rows=4></textarea> megjegyzés:
+     megjegyzés:
+    <textarea cols=40 rows=4></textarea>
     </fieldset>
 
 </body>
