--- a/pizza.html
+++ b/pizza.html
@@ -40,8 +40,7 @@
     </fieldset>
       <p></p>
       <fieldset>
-     megjegyzés:
-    <textarea cols=40 rows=4></textarea>
+    <textarea cols=40 rows=4>megjegyzés:</textarea>
     </fieldset>
 
 </body>
