--- a/pizza.html
+++ b/pizza.html
@@ -20,6 +20,7 @@
 
 <h1>Pizza rendelési űrlap</h1>
 
+    <div content>
       <fieldset>
           <input type='text'> <h1>Név/Email cím</h1>
           <input type='text'> <h1>Telefonszám</h1>
@@ -42,6 +43,7 @@
       <fieldset>
     <textarea cols=40 rows=4>megjegyzés:</textarea>
     </fieldset>
+    </div content>
 
 </body>
 </html>
