--- a/pizza.html
+++ b/pizza.html
@@ -18,7 +18,7 @@
         <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
       </div>
 
-    <div content>
+    <div contain>
 <h1>Pizza rendelési űrlap</h1>
 
       <fieldset>
@@ -43,7 +43,7 @@
       <fieldset>
     <textarea cols=40 rows=4>megjegyzés:</textarea>
     </fieldset>
-    </div content>
+    </div contain>
 
 </body>
 </html>
