--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
         <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
+	<a href="https://benkebalazs1.github.io/kollazs/bejelentkezes.html">Bejelentkezés</a>
+	<a href="https://benkebalazs1.github.io/kollazs/tablazat.html">Táblázat</a>    
       </div>
 
       <div class="content">
@@ -27,21 +29,26 @@
     <h5 style="color: mediumturquoise;">Benke Balázs</h5>
     <h6 style="color: mediumvioletred;">Benke Balázs</h6>
    
-    <p>
-    1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
-    </p>
-    <p>
-    2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
-    </p>
-    <p>
-    3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
-    </p>
-     <p>
-    4. feladat: <a href="https://benkebalazs1.github.io/kollazs/evszak.html" target="blank">Évszakok</a>      
-     </p>
-     <p>
-    5. feladat: <a href="https://benkebalazs1.github.io/kollazs/pizza.html" target="blank">Pizza</a>     
-     </p>
+    	<p>
+    	1. feladat: <a href="https://benkebalazs1.github.io/kollazs/keplink.html" target="blank">Képlink</a>
+    	</p>
+    	<p>
+    	2. feladat: <a href="https://benkebalazs1.github.io/kollazs/listak.html" target="blank">Listák</a>
+    	</p>
+    	<p>
+    	3. feladat: <a href="https://benkebalazs1.github.io/kollazs/orarend.html" target="blank">Órarend</a>
+    	</p>
+     	<p>
+    	4. feladat: <a href="https://benkebalazs1.github.io/kollazs/evszak.html" target="blank">Évszakok</a>      
+     	</p>
+     	<p>
+    	5. feladat: <a href="https://benkebalazs1.github.io/kollazs/pizza.html" target="blank">Pizza</a>     
+     	</p>
+	<p>
+	6. feladat: <a href="https://benkebalazs1.github.io/kollazs/bejelentkezes.html" target="blank">Bejelentkezés</a>
+	</p>
+	<p>
+	7. feladat: <a href="https://benkebalazs1.github.io/kollazs/tablazat.html" target="blank">Táblázat</a> 
     <p>Ez itt a kollázsom:</p>
     <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500>
     </p>
