--- a/pizza.html
+++ b/pizza.html
@@ -18,7 +18,6 @@
         <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
       </div>
 
-    <div contain>
 <h1>Pizza rendelési űrlap</h1>
 
       <fieldset>
@@ -33,6 +32,7 @@
           <input type='checkbox'> 24 cm
           <input type='checkbox'> 36 cm
           <input type='checkbox'> 50 cm
+          <input type='checkbox'> amerikai méret (100 cm)
       </fieldset>
       <p></p>
       <fieldset>
@@ -42,7 +42,6 @@
       <fieldset>
     <textarea cols=40 rows=4>megjegyzés:</textarea>
     </fieldset>
-    </div contain>
 
 </body>
 </html>
