--- a/evszak.html
+++ b/evszak.html
@@ -17,6 +17,11 @@
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
         <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
+        <a href="https://benkebalazs1.github.io/kollazs/pitagorasz.html">Pitagorasz</a>
+        <a href="https://benkebalazs1.github.io/kollazs/kosar.html">Kosár</a>
+        <a href="https://benkebalazs1.github.io/kollazs/bejelentkezes.html">Bejelentkezés</a>
+        <a href="https://benkebalazs1.github.io/kollazs/tablazat.html">Táblázat</a>
+        <a href="https://benkebalazs1.github.io/kollazs/javatest.html">Javatest</a>
       </div>
  
     <h1> Évszakok </h1> 
