--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
         <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
+        <a href="https://benkebalazs1.github.io/kollazs/pitagorasz.html">Pitagorasz</a>
+        <a href="https://benkebalazs1.github.io/kollazs/kosar.html">Kosár</a>
+        <a href="https://benkebalazs1.github.io/kollazs/bejelentkezes.html">Bejelentkezés</a>
+        <a href="https://benkebalazs1.github.io/kollazs/tablazat.html">Táblázat</a>
+        <a href="https://benkebalazs1.github.io/kollazs/javatest.html">Javatest</a>
       </div>
 
       <div class="content">
@@ -42,6 +47,21 @@
      <p>
     5. feladat: <a href="https://benkebalazs1.github.io/kollazs/pizza.html" target="blank">Pizza</a>     
      </p>
+     <p>
+    6. feladat: <a href="https://benkebalazs1.github.io/kollazs/pitagorasz.html" target="blank">Pitagorasz</a>
+    </p>
+    <p>
+    7. feladat: <a href="https://benkebalazs1.github.io/kollazs/kosar.html" target="blank">Kosár</a>
+    </p>
+    <p>
+    8. feladat: <a href="https://benkebalazs1.github.io/kollazs/bejelentkezes.html" target="blank">Bejelentkezés</a>
+    </p>
+    <p>
+    9. feladat: <a href="https://benkebalazs1.github.io/kollazs/tablazat.html" target="blank">Táblázat</a>
+    </p>
+    <p>
+    10. feladat: <a href="https://benkebalazs1.github.io/kollazs/javatest.html" target="blank">Javatest</a> 
+    </p>    
     <p>Ez itt a kollázsom:</p>
     <img src="https://github.com/benkebalazs1/kollazs/blob/main/CollageMaker_20210922_191119758.jpg?raw=true" alt="kollázs" title="kollázs" width=500>
     </p>
