--- a/kosar.html
+++ b/kosar.html
@@ -14,5 +14,20 @@
     <button onclick="TÖRLÉS()">TÖRLÉS</button>
     <button onclick="KOSÁR()">KOSÁR</button>
     <table border="2px" id="KOSÁR"></table>
+
+    <div class="sidebar">
+        <a class="active" href="https://benkebalazs1.github.io/kollazs/index">Home</a>
+        <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
+        <a href="https://benkebalazs1.github.io/kollazs/listak.html">Listák</a>
+        <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
+        <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
+        <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
+        <a href="https://benkebalazs1.github.io/kollazs/pitagorasz.html">Pitagorasz</a>
+        <a href="https://benkebalazs1.github.io/kollazs/kosar.html">Kosár</a>
+        <a href="https://benkebalazs1.github.io/kollazs/bejelentkezes.html">Bejelentkezés</a>
+        <a href="https://benkebalazs1.github.io/kollazs/tablazat.html">Táblázat</a>
+        <a href="https://benkebalazs1.github.io/kollazs/javatest.html">Javatest</a>
+      </div>
+
 </body>
 </html>
