--- a/pizza.html
+++ b/pizza.html
@@ -16,8 +16,14 @@
         <a href="https://benkebalazs1.github.io/kollazs/orarend.html">Órarend</a>
         <a href="https://benkebalazs1.github.io/kollazs/evszak.html">Évszakok</a>
         <a href="https://benkebalazs1.github.io/kollazs/pizza.html">Pizza</a>
+        <a href="https://benkebalazs1.github.io/kollazs/pitagorasz.html">Pitagorasz</a>
+        <a href="https://benkebalazs1.github.io/kollazs/kosar.html">Kosár</a>
+        <a href="https://benkebalazs1.github.io/kollazs/bejelentkezes.html">Bejelentkezés</a>
+        <a href="https://benkebalazs1.github.io/kollazs/tablazat.html">Táblázat</a>
+        <a href="https://benkebalazs1.github.io/kollazs/javatest.html">Javatest</a>
       </div>
 
+<div>
 <h1>Pizza rendelési űrlap</h1>
 
       <fieldset>
@@ -41,7 +47,8 @@
       <p></p>
       <fieldset>
     <textarea cols=40 rows=4>megjegyzés:</textarea>
-    </fieldset>
+    </fieldset>ű
+</div>
 
 </body>
 </html>
