--- a/pizza.html
+++ b/pizza.html
@@ -23,8 +23,8 @@
         <a href="https://benkebalazs1.github.io/kollazs/javatest.html">Javatest</a>
       </div>
 
-<div>
-<h1>Pizza rendelési űrlap</h1>
+<div class="content">
+<h1>Pizza rendelési űrlap</h1>S
 
       <fieldset>
           <input type='text'> <h1>Név/Email cím</h1>
