--- a/javatest.html
+++ b/javatest.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript teszt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <input type="number" name="nbr" id="x_ert"> érték <br>
