--- a/pitagorasz.html
+++ b/pitagorasz.html
@@ -10,6 +10,7 @@
             eredemny.value = Math.sqrt(a_old * a_old.value + b_old.value * b_old.value)
         }
     </script>
+    <link rel="stylesheet" href="style.css">
 </head>
     <h1>PITAGORASZ</h1>
     <img src="oo-pv-1.svg" alt="">
