--- a/pizza.html
+++ b/pizza.html
@@ -47,7 +47,7 @@
       <p></p>
       <fieldset>
     <textarea cols=40 rows=4>megjegyzés:</textarea>
-    </fieldset>ű
+    </fieldset>
 </div>
 
 </body>
