--- a/kosar.html
+++ b/kosar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kosár</title>
     <script src="JavaScript.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button onclick="hozzaad('plakat01')">T1.</button>
