--- a/pizza.html
+++ b/pizza.html
@@ -24,7 +24,7 @@
       </div>
 
 <div class="content">
-<h1>Pizza rendelési űrlap</h1>S
+<h1>Pizza rendelési űrlap</h1>
 
       <fieldset>
           <input type='text'> <h1>Név/Email cím</h1>
