--- a/pitagorasz.html
+++ b/pitagorasz.html
@@ -12,17 +12,8 @@
     </script>
     <link rel="stylesheet" href="style.css">
 </head>
-    <h1>PITAGORASZ</h1>
-    <img src="oo-pv-1.svg" alt="">
-
-    <fieldset style="width: 0%;">
-    <legend>Pitagorasz átfogó értéke számoló program</legend>
-        <input type="number" name="oldal" id="a_old" placeholder="a_old"><br>
-        <input type="number" name="oldal" id="b_old" placeholder="b_old"><br>
-        <input type="eredeti" id="eredemny" placeholder="eredmény"><br>
-        <input type="button" name="oldal" onclick="szamol()" value="KISZÁMOL">
-    </fieldset> 
-
+<body>
+    
     <div class="sidebar">
         <a class="active" href="https://benkebalazs1.github.io/kollazs/index">Home</a>
         <a href="https://benkebalazs1.github.io/kollazs/keplink.html">Képlink</a>
@@ -36,6 +27,19 @@
         <a href="https://benkebalazs1.github.io/kollazs/tablazat.html">Táblázat</a>
         <a href="https://benkebalazs1.github.io/kollazs/javatest.html">Javatest</a>
       </div>
+
+    <h1>PITAGORASZ</h1>
+    <img src="oo-pv-1.svg" alt="">
+
+    <fieldset style="width: 0%;">
+    <legend>Pitagorasz átfogó értéke számoló program</legend>
+        <input type="number" name="oldal" id="a_old" placeholder="a_old"><br>
+        <input type="number" name="oldal" id="b_old" placeholder="b_old"><br>
+        <input type="eredeti" id="eredemny" placeholder="eredmény"><br>
+        <input type="button" name="oldal" onclick="szamol()" value="KISZÁMOL">
+    </fieldset> 
+
+
 
 </body>
 </html>
