--- a/javascrpit.html
+++ b/javascrpit.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript demo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="content">
     <form action="/action_page.php">
         <h2>Register Form</h2>
         <div class="input-container">
@@ -26,5 +28,6 @@
       
         <button type="submit" class="btn">Register</button>
       </form>
+    </div>
 </body>
 </html>
