--- a/pitagorasz.html
+++ b/pitagorasz.html
@@ -28,6 +28,7 @@
         <a href="https://benkebalazs1.github.io/kollazs/javatest.html">Javatest</a>
       </div>
 
+      <div class="content">
     <h1>PITAGORASZ</h1>
     <img src="oo-pv-1.svg" alt="">
 
@@ -38,7 +39,7 @@
         <input type="eredeti" id="eredemny" placeholder="eredmény"><br>
         <input type="button" name="oldal" onclick="szamol()" value="KISZÁMOL">
     </fieldset> 
-
+</div>
 
 
 </body>
