--- a/tablazat.html
+++ b/tablazat.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Táblazat</title>
     <link rel="stylesheet" href="tablazat.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <fieldset>
