--- a/kosar.html
+++ b/kosar.html
@@ -7,6 +7,7 @@
     <title>Kosár</title>
     <script src="JavaScript.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
